Enhance home page theme with modern design improvements
- Add gradient backgrounds and floating geometric shapes to hero section
- Implement smooth animations (fade-in, slide-up, float) for better UX
- Enhance typography with gradient text effects on key phrases
- Improve button styling with gradient hover effects and micro-interactions
- Add backdrop blur effects to navbar for modern glass morphism
- Enhance repository cards with hover animations and staggered reveals
- Update color scheme with subtle gradient overlays throughout
- Fix linter warnings by replacing inline styles with CSS classes
- Maintain GitHub-inspired dark theme aesthetic with improved visual hierarchy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <title>OSS Discovery - Find Your Next Open Source Contribution</title>
+    <meta name="description" content="Discover the perfect open source repository to contribute to based on your skills, interests, and availability. AI-powered recommendations for developers." />
+    <meta name="author" content="OSS Discovery" />
+
+    <meta property="og:title" content="OSS Discovery - Find Your Next Open Source Contribution" />
+    <meta property="og:description" content="Discover the perfect open source repository to contribute to based on your skills, interests, and availability." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
