--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OSS Discovery - Find Your Next Open Source Contribution</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>FindMy Repo - Find Your Next Open Source Contribution</title>
     <meta name="description" content="Discover the perfect open source repository to contribute to based on your skills, interests, and availability. AI-powered recommendations for developers." />
-    <meta name="author" content="OSS Discovery" />
+    <meta name="author" content="FindMy Repo" />
 
-    <meta property="og:title" content="OSS Discovery - Find Your Next Open Source Contribution" />
+    <meta property="og:title" content="FindMy Repo - Find Your Next Open Source Contribution" />
     <meta property="og:description" content="Discover the perfect open source repository to contribute to based on your skills, interests, and availability." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
